src/z80asm/z80asm2/t/30-directive/expected/undefine_11.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/undefine_11.asm
Assembling t/30-directive/input/undefine_11.asm...
t/30-directive/input/undefine_11.asm:1:10: error: Expected identifier after UNDEFINE
    #undefine ; no name
             ^
t/30-directive/input/undefine_11.asm:2:17: error: Unexpected token after UNDEFINE: world
    #undefine hello world ; extra tokens
                    ^
# file: t/30-directive/input/undefine_11.asm
EndOfLine	"\n"	3:1	
